# Dog-Breed-Finder

./: .gitignore  README.md  app.py  criteria.json  dogs.json  pyproject.toml  utils.py
Writerside/: eu.tree  redirection-rules.xml  writerside.cfg
Writerside/topics/: Getting-Started.md  Technical-Details-for-Developers.md  Troubleshooting.md  Using-the-Features.md  starter-topic.md
static/: scripts.js  styles.css
templates/: breed_info.html  header.html  index.html  life_stages.html  research.html  search.html
templates/research/: life_stages.html  sports.html
